ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM np_start_func_dir ID SEMICOLON declaration_loop main_function
Rule 2     main_function -> MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop statement_loop CLOSE_KEY
Rule 3     np_start_func_dir -> epsilon
Rule 4     declaration_loop -> declaration declaration_loop
Rule 5     declaration_loop -> epsilon
Rule 6     statement_loop -> statement statement_loop1
Rule 7     statement_loop1 -> statement statement_loop1
Rule 8     statement_loop1 -> epsilon
Rule 9     declaration -> class_declaration
Rule 10    declaration -> variable_declaration
Rule 11    declaration -> function_declaration
Rule 12    variable -> ID variable1
Rule 13    variable1 -> OPEN_BRACKET hyper_exp CLOSE_BRACKET
Rule 14    variable1 -> DOT ID
Rule 15    variable1 -> epsilon
Rule 16    class_declaration -> CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
Rule 17    class_declaration1 -> IS ID
Rule 18    class_declaration1 -> epsilon
Rule 19    class_declaration2 -> class_function class_declaration2
Rule 20    class_declaration2 -> epsilon
Rule 21    class_body -> class_body1 class_body3
Rule 22    class_body1 -> variable_declaration class_body2
Rule 23    class_body2 -> variable_declaration class_body2
Rule 24    class_body2 -> epsilon
Rule 25    class_body3 -> class_function_declaration class_body4
Rule 26    class_body4 -> class_function_declaration class_body4
Rule 27    class_body4 -> epsilon
Rule 28    constructor -> CONSTRUCTOR ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS OPEN_KEY statement_loop CLOSE_KEY
Rule 29    variable_declaration_loop -> variable_declaration variable_declaration_loop
Rule 30    variable_declaration_loop -> epsilon
Rule 31    variable_declaration -> VAR data_type ID SEMICOLON
Rule 32    variable_declaration -> GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
Rule 33    variable_declaration -> OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
Rule 34    var_type -> VAR
Rule 35    var_type -> GROUP
Rule 36    var_type -> OBJ
Rule 37    variable_declaration1 -> hyper_exp_loop
Rule 38    variable_declaration1 -> epsilon
Rule 39    statement -> assignment
Rule 40    statement -> conditional
Rule 41    statement -> cycle
Rule 42    statement -> read
Rule 43    statement -> write
Rule 44    statement -> function_call
Rule 45    assignment -> variable ASSIGN hyper_exp SEMICOLON
Rule 46    hyper_exp -> super_exp hyper_exp1
Rule 47    hyper_exp1 -> AND super_exp hyper_exp1
Rule 48    hyper_exp1 -> OR super_exp hyper_exp1
Rule 49    hyper_exp1 -> epsilon
Rule 50    super_exp -> exp super_exp1
Rule 51    super_exp1 -> GREATER_THAN exp super_exp1
Rule 52    super_exp1 -> LESS_THAN exp super_exp1
Rule 53    super_exp1 -> EQUAL_TO exp super_exp1
Rule 54    super_exp1 -> NOT_EQUAL_TO exp super_exp1
Rule 55    super_exp1 -> epsilon
Rule 56    exp -> term exp1
Rule 57    exp1 -> PLUS term exp1
Rule 58    exp1 -> MINUS term exp1
Rule 59    exp1 -> epsilon
Rule 60    term -> factor term1
Rule 61    term1 -> MULTIPLICATION factor term1
Rule 62    term1 -> DIVISION factor term1
Rule 63    term1 -> epsilon
Rule 64    factor -> function_call
Rule 65    factor -> FLOAT_VALUE
Rule 66    factor -> INT_VALUE
Rule 67    factor -> BOOL_VALUE
Rule 68    factor -> STRING_VALUE
Rule 69    factor -> variable
Rule 70    factor -> OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS
Rule 71    data_type -> INT
Rule 72    data_type -> FLOAT
Rule 73    data_type -> STRING
Rule 74    data_type -> BOOL
Rule 75    class_function_declaration -> FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg SEMICOLON
Rule 76    return_arg -> data_type
Rule 77    return_arg -> VOID
Rule 78    parameter -> var_type data_type ID parameter1
Rule 79    parameter -> epsilon
Rule 80    parameter1 -> COMMA var_type data_type ID parameter1
Rule 81    parameter1 -> epsilon
Rule 82    conditional -> IF OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS OPEN_KEY statement_loop CLOSE_KEY conditional1
Rule 83    conditional1 -> ELSE OPEN_KEY statement_loop CLOSE_KEY
Rule 84    conditional1 -> epsilon
Rule 85    cycle -> FOR OPEN_PARENTHESIS ID IN ID CLOSE_PARENTHESIS cycle1
Rule 86    cycle -> WHILE OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS cycle1
Rule 87    cycle1 -> OPEN_KEY statement_loop CLOSE_KEY
Rule 88    read -> READ OPEN_PARENTHESIS variable_loop CLOSE_PARENTHESIS SEMICOLON
Rule 89    variable_loop -> variable variable_loop1
Rule 90    variable_loop1 -> COMMA variable variable_loop1
Rule 91    variable_loop1 -> epsilon
Rule 92    write -> WRITE OPEN_PARENTHESIS hyper_exp_loop CLOSE_PARENTHESIS SEMICOLON
Rule 93    hyper_exp_loop -> hyper_exp hyper_exp_loop1
Rule 94    hyper_exp_loop1 -> COMMA hyper_exp hyper_exp_loop1
Rule 95    hyper_exp_loop1 -> epsilon
Rule 96    function_call -> ID function_call1 OPEN_PARENTHESIS function_call2 CLOSE_PARENTHESIS SEMICOLON
Rule 97    function_call1 -> DOT ID
Rule 98    function_call1 -> epsilon
Rule 99    function_call2 -> hyper_exp_loop
Rule 100   function_call2 -> epsilon
Rule 101   class_function -> AT_CLASS ID FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY function_statement_loop function_return CLOSE_KEY
Rule 102   function_declaration -> FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY
Rule 103   function_return -> RETURN hyper_exp SEMICOLON
Rule 104   function_return -> epsilon
Rule 105   function_statement_loop -> statement_loop
Rule 106   function_statement_loop -> epsilon
Rule 107   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 47
ASSIGN               : 32 33 45
AT_CLASS             : 101
BOOL                 : 74
BOOL_VALUE           : 67
CLASS                : 16
CLOSE_BRACKET        : 13 32
CLOSE_KEY            : 2 16 28 82 83 87 101 102
CLOSE_PARENTHESIS    : 2 28 33 70 75 82 85 86 88 92 96 101 102
COMMA                : 80 90 94
CONSTRUCTOR          : 28
DIVISION             : 62
DOT                  : 14 97
ELSE                 : 83
EQUAL_TO             : 53
FLOAT                : 72
FLOAT_VALUE          : 65
FOR                  : 85
FUNCTION             : 75 101 102
GREATER_THAN         : 51
GROUP                : 32 35
ID                   : 1 12 14 16 17 28 31 32 33 33 75 78 80 85 85 96 97 101 101 102
IF                   : 82
IN                   : 85
INT                  : 71
INT_VALUE            : 32 66
IS                   : 17
LESS_THAN            : 52
MAIN                 : 2
MINUS                : 58
MULTIPLICATION       : 61
NOT_EQUAL_TO         : 54
OBJ                  : 33 36
OPEN_BRACKET         : 13 32
OPEN_KEY             : 2 16 28 82 83 87 101 102
OPEN_PARENTHESIS     : 2 28 33 70 75 82 85 86 88 92 96 101 102
OR                   : 48
PLUS                 : 57
PROGRAM              : 1
READ                 : 88
RETURN               : 103
RETURNS              : 75 101 102
SEMICOLON            : 1 16 31 32 33 45 75 88 92 96 103
STRING               : 73
STRING_VALUE         : 68
VAR                  : 31 34
VOID                 : 77
WHILE                : 86
WRITE                : 92
error                : 

Nonterminals, with rules where they appear

assignment           : 39
class_body           : 16
class_body1          : 21
class_body2          : 22 23
class_body3          : 21
class_body4          : 25 26
class_declaration    : 9
class_declaration1   : 16
class_declaration2   : 16 19
class_function       : 19
class_function_declaration : 25 26
conditional          : 40
conditional1         : 82
constructor          : 16
cycle                : 41
cycle1               : 85 86
data_type            : 31 32 76 78 80
declaration          : 4
declaration_loop     : 1 4
epsilon              : 3 5 8 15 18 20 24 27 30 38 49 55 59 63 79 81 84 91 95 98 100 104 106
exp                  : 50 51 52 53 54
exp1                 : 56 57 58
factor               : 60 61 62
function_call        : 44 64
function_call1       : 96
function_call2       : 96
function_declaration : 11
function_return      : 101 102
function_statement_loop : 101 102
hyper_exp            : 13 45 70 82 86 93 94 103
hyper_exp1           : 46 47 48
hyper_exp_loop       : 37 92 99
hyper_exp_loop1      : 93 94
main_function        : 1
np_start_func_dir    : 1
parameter            : 28 75 101 102
parameter1           : 78 80
program              : 0
read                 : 42
return_arg           : 75 101 102
statement            : 6 7
statement_loop       : 2 28 82 83 87 105
statement_loop1      : 6 7
super_exp            : 46 47 48
super_exp1           : 50 51 52 53 54
term                 : 56 57 58
term1                : 60 61 62
var_type             : 78 80
variable             : 45 69 89 90
variable1            : 12
variable_declaration : 10 22 23 29
variable_declaration1 : 33
variable_declaration_loop : 2 29 102
variable_loop        : 88
variable_loop1       : 89 90
write                : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM np_start_func_dir ID SEMICOLON declaration_loop main_function

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . np_start_func_dir ID SEMICOLON declaration_loop main_function
    (3) np_start_func_dir -> . epsilon
    (107) epsilon -> .

    ID              reduce using rule 107 (epsilon -> .)

    np_start_func_dir              shift and go to state 3
    epsilon                        shift and go to state 4

state 3

    (1) program -> PROGRAM np_start_func_dir . ID SEMICOLON declaration_loop main_function

    ID              shift and go to state 5


state 4

    (3) np_start_func_dir -> epsilon .

    ID              reduce using rule 3 (np_start_func_dir -> epsilon .)


state 5

    (1) program -> PROGRAM np_start_func_dir ID . SEMICOLON declaration_loop main_function

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM np_start_func_dir ID SEMICOLON . declaration_loop main_function
    (4) declaration_loop -> . declaration declaration_loop
    (5) declaration_loop -> . epsilon
    (9) declaration -> . class_declaration
    (10) declaration -> . variable_declaration
    (11) declaration -> . function_declaration
    (107) epsilon -> .
    (16) class_declaration -> . CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (31) variable_declaration -> . VAR data_type ID SEMICOLON
    (32) variable_declaration -> . GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (33) variable_declaration -> . OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
    (102) function_declaration -> . FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    MAIN            reduce using rule 107 (epsilon -> .)
    CLASS           shift and go to state 13
    VAR             shift and go to state 14
    GROUP           shift and go to state 15
    OBJ             shift and go to state 16
    FUNCTION        shift and go to state 17

    declaration_loop               shift and go to state 7
    declaration                    shift and go to state 8
    epsilon                        shift and go to state 9
    class_declaration              shift and go to state 10
    variable_declaration           shift and go to state 11
    function_declaration           shift and go to state 12

state 7

    (1) program -> PROGRAM np_start_func_dir ID SEMICOLON declaration_loop . main_function
    (2) main_function -> . MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop statement_loop CLOSE_KEY

    MAIN            shift and go to state 19

    main_function                  shift and go to state 18

state 8

    (4) declaration_loop -> declaration . declaration_loop
    (4) declaration_loop -> . declaration declaration_loop
    (5) declaration_loop -> . epsilon
    (9) declaration -> . class_declaration
    (10) declaration -> . variable_declaration
    (11) declaration -> . function_declaration
    (107) epsilon -> .
    (16) class_declaration -> . CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (31) variable_declaration -> . VAR data_type ID SEMICOLON
    (32) variable_declaration -> . GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (33) variable_declaration -> . OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
    (102) function_declaration -> . FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    MAIN            reduce using rule 107 (epsilon -> .)
    CLASS           shift and go to state 13
    VAR             shift and go to state 14
    GROUP           shift and go to state 15
    OBJ             shift and go to state 16
    FUNCTION        shift and go to state 17

    declaration                    shift and go to state 8
    declaration_loop               shift and go to state 20
    epsilon                        shift and go to state 9
    class_declaration              shift and go to state 10
    variable_declaration           shift and go to state 11
    function_declaration           shift and go to state 12

state 9

    (5) declaration_loop -> epsilon .

    MAIN            reduce using rule 5 (declaration_loop -> epsilon .)


state 10

    (9) declaration -> class_declaration .

    CLASS           reduce using rule 9 (declaration -> class_declaration .)
    VAR             reduce using rule 9 (declaration -> class_declaration .)
    GROUP           reduce using rule 9 (declaration -> class_declaration .)
    OBJ             reduce using rule 9 (declaration -> class_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> class_declaration .)
    MAIN            reduce using rule 9 (declaration -> class_declaration .)


state 11

    (10) declaration -> variable_declaration .

    CLASS           reduce using rule 10 (declaration -> variable_declaration .)
    VAR             reduce using rule 10 (declaration -> variable_declaration .)
    GROUP           reduce using rule 10 (declaration -> variable_declaration .)
    OBJ             reduce using rule 10 (declaration -> variable_declaration .)
    FUNCTION        reduce using rule 10 (declaration -> variable_declaration .)
    MAIN            reduce using rule 10 (declaration -> variable_declaration .)


state 12

    (11) declaration -> function_declaration .

    CLASS           reduce using rule 11 (declaration -> function_declaration .)
    VAR             reduce using rule 11 (declaration -> function_declaration .)
    GROUP           reduce using rule 11 (declaration -> function_declaration .)
    OBJ             reduce using rule 11 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 11 (declaration -> function_declaration .)
    MAIN            reduce using rule 11 (declaration -> function_declaration .)


state 13

    (16) class_declaration -> CLASS . ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2

    ID              shift and go to state 21


state 14

    (31) variable_declaration -> VAR . data_type ID SEMICOLON
    (71) data_type -> . INT
    (72) data_type -> . FLOAT
    (73) data_type -> . STRING
    (74) data_type -> . BOOL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    STRING          shift and go to state 25
    BOOL            shift and go to state 26

    data_type                      shift and go to state 22

state 15

    (32) variable_declaration -> GROUP . ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON

    ID              shift and go to state 27


state 16

    (33) variable_declaration -> OBJ . ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON

    ID              shift and go to state 28


state 17

    (102) function_declaration -> FUNCTION . ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    ID              shift and go to state 29


state 18

    (1) program -> PROGRAM np_start_func_dir ID SEMICOLON declaration_loop main_function .

    $end            reduce using rule 1 (program -> PROGRAM np_start_func_dir ID SEMICOLON declaration_loop main_function .)


state 19

    (2) main_function -> MAIN . OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop statement_loop CLOSE_KEY

    OPEN_PARENTHESIS shift and go to state 30


state 20

    (4) declaration_loop -> declaration declaration_loop .

    MAIN            reduce using rule 4 (declaration_loop -> declaration declaration_loop .)


state 21

    (16) class_declaration -> CLASS ID . class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (17) class_declaration1 -> . IS ID
    (18) class_declaration1 -> . epsilon
    (107) epsilon -> .

    IS              shift and go to state 32
    OPEN_KEY        reduce using rule 107 (epsilon -> .)

    class_declaration1             shift and go to state 31
    epsilon                        shift and go to state 33

state 22

    (31) variable_declaration -> VAR data_type . ID SEMICOLON

    ID              shift and go to state 34


state 23

    (71) data_type -> INT .

    ID              reduce using rule 71 (data_type -> INT .)
    OPEN_BRACKET    reduce using rule 71 (data_type -> INT .)
    OPEN_KEY        reduce using rule 71 (data_type -> INT .)
    SEMICOLON       reduce using rule 71 (data_type -> INT .)


state 24

    (72) data_type -> FLOAT .

    ID              reduce using rule 72 (data_type -> FLOAT .)
    OPEN_BRACKET    reduce using rule 72 (data_type -> FLOAT .)
    OPEN_KEY        reduce using rule 72 (data_type -> FLOAT .)
    SEMICOLON       reduce using rule 72 (data_type -> FLOAT .)


state 25

    (73) data_type -> STRING .

    ID              reduce using rule 73 (data_type -> STRING .)
    OPEN_BRACKET    reduce using rule 73 (data_type -> STRING .)
    OPEN_KEY        reduce using rule 73 (data_type -> STRING .)
    SEMICOLON       reduce using rule 73 (data_type -> STRING .)


state 26

    (74) data_type -> BOOL .

    ID              reduce using rule 74 (data_type -> BOOL .)
    OPEN_BRACKET    reduce using rule 74 (data_type -> BOOL .)
    OPEN_KEY        reduce using rule 74 (data_type -> BOOL .)
    SEMICOLON       reduce using rule 74 (data_type -> BOOL .)


state 27

    (32) variable_declaration -> GROUP ID . ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON

    ASSIGN          shift and go to state 35


state 28

    (33) variable_declaration -> OBJ ID . ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON

    ASSIGN          shift and go to state 36


state 29

    (102) function_declaration -> FUNCTION ID . OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    OPEN_PARENTHESIS shift and go to state 37


state 30

    (2) main_function -> MAIN OPEN_PARENTHESIS . CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop statement_loop CLOSE_KEY

    CLOSE_PARENTHESIS shift and go to state 38


state 31

    (16) class_declaration -> CLASS ID class_declaration1 . OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2

    OPEN_KEY        shift and go to state 39


state 32

    (17) class_declaration1 -> IS . ID

    ID              shift and go to state 40


state 33

    (18) class_declaration1 -> epsilon .

    OPEN_KEY        reduce using rule 18 (class_declaration1 -> epsilon .)


state 34

    (31) variable_declaration -> VAR data_type ID . SEMICOLON

    SEMICOLON       shift and go to state 41


state 35

    (32) variable_declaration -> GROUP ID ASSIGN . data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (71) data_type -> . INT
    (72) data_type -> . FLOAT
    (73) data_type -> . STRING
    (74) data_type -> . BOOL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    STRING          shift and go to state 25
    BOOL            shift and go to state 26

    data_type                      shift and go to state 42

state 36

    (33) variable_declaration -> OBJ ID ASSIGN . ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON

    ID              shift and go to state 43


state 37

    (102) function_declaration -> FUNCTION ID OPEN_PARENTHESIS . parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY
    (78) parameter -> . var_type data_type ID parameter1
    (79) parameter -> . epsilon
    (34) var_type -> . VAR
    (35) var_type -> . GROUP
    (36) var_type -> . OBJ
    (107) epsilon -> .

    VAR             shift and go to state 47
    GROUP           shift and go to state 48
    OBJ             shift and go to state 49
    CLOSE_PARENTHESIS reduce using rule 107 (epsilon -> .)

    parameter                      shift and go to state 44
    var_type                       shift and go to state 45
    epsilon                        shift and go to state 46

state 38

    (2) main_function -> MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS . OPEN_KEY variable_declaration_loop statement_loop CLOSE_KEY

    OPEN_KEY        shift and go to state 50


state 39

    (16) class_declaration -> CLASS ID class_declaration1 OPEN_KEY . class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (21) class_body -> . class_body1 class_body3
    (22) class_body1 -> . variable_declaration class_body2
    (31) variable_declaration -> . VAR data_type ID SEMICOLON
    (32) variable_declaration -> . GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (33) variable_declaration -> . OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON

    VAR             shift and go to state 14
    GROUP           shift and go to state 15
    OBJ             shift and go to state 16

    class_body                     shift and go to state 51
    class_body1                    shift and go to state 52
    variable_declaration           shift and go to state 53

state 40

    (17) class_declaration1 -> IS ID .

    OPEN_KEY        reduce using rule 17 (class_declaration1 -> IS ID .)


state 41

    (31) variable_declaration -> VAR data_type ID SEMICOLON .

    CLASS           reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    VAR             reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    GROUP           reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    OBJ             reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    FUNCTION        reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    MAIN            reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    IF              reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    FOR             reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    WHILE           reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    READ            reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    WRITE           reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    ID              reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    RETURN          reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)
    CLOSE_KEY       reduce using rule 31 (variable_declaration -> VAR data_type ID SEMICOLON .)


state 42

    (32) variable_declaration -> GROUP ID ASSIGN data_type . OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON

    OPEN_BRACKET    shift and go to state 54


state 43

    (33) variable_declaration -> OBJ ID ASSIGN ID . OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON

    OPEN_PARENTHESIS shift and go to state 55


state 44

    (102) function_declaration -> FUNCTION ID OPEN_PARENTHESIS parameter . CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    CLOSE_PARENTHESIS shift and go to state 56


state 45

    (78) parameter -> var_type . data_type ID parameter1
    (71) data_type -> . INT
    (72) data_type -> . FLOAT
    (73) data_type -> . STRING
    (74) data_type -> . BOOL

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    STRING          shift and go to state 25
    BOOL            shift and go to state 26

    data_type                      shift and go to state 57

state 46

    (79) parameter -> epsilon .

    CLOSE_PARENTHESIS reduce using rule 79 (parameter -> epsilon .)


state 47

    (34) var_type -> VAR .

    INT             reduce using rule 34 (var_type -> VAR .)
    FLOAT           reduce using rule 34 (var_type -> VAR .)
    STRING          reduce using rule 34 (var_type -> VAR .)
    BOOL            reduce using rule 34 (var_type -> VAR .)


state 48

    (35) var_type -> GROUP .

    INT             reduce using rule 35 (var_type -> GROUP .)
    FLOAT           reduce using rule 35 (var_type -> GROUP .)
    STRING          reduce using rule 35 (var_type -> GROUP .)
    BOOL            reduce using rule 35 (var_type -> GROUP .)


state 49

    (36) var_type -> OBJ .

    INT             reduce using rule 36 (var_type -> OBJ .)
    FLOAT           reduce using rule 36 (var_type -> OBJ .)
    STRING          reduce using rule 36 (var_type -> OBJ .)
    BOOL            reduce using rule 36 (var_type -> OBJ .)


state 50

    (2) main_function -> MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY . variable_declaration_loop statement_loop CLOSE_KEY
    (29) variable_declaration_loop -> . variable_declaration variable_declaration_loop
    (30) variable_declaration_loop -> . epsilon
    (31) variable_declaration -> . VAR data_type ID SEMICOLON
    (32) variable_declaration -> . GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (33) variable_declaration -> . OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
    (107) epsilon -> .

    VAR             shift and go to state 14
    GROUP           shift and go to state 15
    OBJ             shift and go to state 16
    IF              reduce using rule 107 (epsilon -> .)
    FOR             reduce using rule 107 (epsilon -> .)
    WHILE           reduce using rule 107 (epsilon -> .)
    READ            reduce using rule 107 (epsilon -> .)
    WRITE           reduce using rule 107 (epsilon -> .)
    ID              reduce using rule 107 (epsilon -> .)

    variable_declaration_loop      shift and go to state 58
    variable_declaration           shift and go to state 59
    epsilon                        shift and go to state 60

state 51

    (16) class_declaration -> CLASS ID class_declaration1 OPEN_KEY class_body . CLOSE_KEY SEMICOLON constructor class_declaration2

    CLOSE_KEY       shift and go to state 61


state 52

    (21) class_body -> class_body1 . class_body3
    (25) class_body3 -> . class_function_declaration class_body4
    (75) class_function_declaration -> . FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg SEMICOLON

    FUNCTION        shift and go to state 64

    class_body3                    shift and go to state 62
    class_function_declaration     shift and go to state 63

state 53

    (22) class_body1 -> variable_declaration . class_body2
    (23) class_body2 -> . variable_declaration class_body2
    (24) class_body2 -> . epsilon
    (31) variable_declaration -> . VAR data_type ID SEMICOLON
    (32) variable_declaration -> . GROUP ID ASSIGN data_type OPEN_BRACKET INT_VALUE CLOSE_BRACKET SEMICOLON
    (33) variable_declaration -> . OBJ ID ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
    (107) epsilon -> .

    VAR             shift and go to state 14
    GROUP           shift and go to state 15
    OBJ             shift and go to state 16
    FUNCTION        reduce using rule 107 (epsilon -> .)

    variable_declaration           shift and go to state 65
    class_body2                    shift and go to state 66
    epsilon                        shift and go to state 67

state 54

    (32) variable_declaration -> GROUP ID ASSIGN data_type OPEN_BRACKET . INT_VALUE CLOSE_BRACKET SEMICOLON

    INT_VALUE       shift and go to state 68


state 55

    (33) variable_declaration -> OBJ ID ASSIGN ID OPEN_PARENTHESIS . variable_declaration1 CLOSE_PARENTHESIS SEMICOLON
    (37) variable_declaration1 -> . hyper_exp_loop
    (38) variable_declaration1 -> . epsilon
    (93) hyper_exp_loop -> . hyper_exp hyper_exp_loop1
    (107) epsilon -> .
    (46) hyper_exp -> . super_exp hyper_exp1
    (50) super_exp -> . exp super_exp1
    (56) exp -> . term exp1
    (60) term -> . factor term1
    (64) factor -> . function_call
    (65) factor -> . FLOAT_VALUE
    (66) factor -> . INT_VALUE
    (67) factor -> . BOOL_VALUE
    (68) factor -> . STRING_VALUE
    (69) factor -> . variable
    (70) factor -> . OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS
    (96) function_call -> . ID function_call1 OPEN_PARENTHESIS function_call2 CLOSE_PARENTHESIS SEMICOLON
    (12) variable -> . ID variable1

    CLOSE_PARENTHESIS reduce using rule 107 (epsilon -> .)
    FLOAT_VALUE     shift and go to state 80
    INT_VALUE       shift and go to state 81
    BOOL_VALUE      shift and go to state 82
    STRING_VALUE    shift and go to state 83
    OPEN_PARENTHESIS shift and go to state 70
    ID              shift and go to state 69

    variable_declaration1          shift and go to state 71
    hyper_exp_loop                 shift and go to state 72
    epsilon                        shift and go to state 73
    hyper_exp                      shift and go to state 74
    super_exp                      shift and go to state 75
    exp                            shift and go to state 76
    term                           shift and go to state 77
    factor                         shift and go to state 78
    function_call                  shift and go to state 79
    variable                       shift and go to state 84

state 56

    (102) function_declaration -> FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS . RETURNS return_arg OPEN_KEY variable_declaration_loop function_statement_loop function_return CLOSE_KEY

    RETURNS         shift and go to state 85


state 57

    (78) parameter -> var_type data_type . ID parameter1

    ID              shift and go to state 86


state 58

    (2) main_function -> MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop . statement_loop CLOSE_KEY
    (6) statement_loop -> . statement statement_loop1
    (39) statement -> . assignment
    (40) statement -> . conditional
    (41) statement -> . cycle
    (42) statement -> . read
    (43) statement -> . write
    (44) statement -> . function_call
    (45) assignment -> . variable ASSIGN hyper_exp SEMICOLON
    (82) conditional -> . IF OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS OPEN_KEY statement_loop CLOSE_KEY conditional1
    (85) cycle -> . FOR OPEN_PARENTHESIS ID IN ID CLOSE_PARENTHESIS cycle1
    (86) cycle -> . WHILE OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS cycle1
    (88) read -> . READ OPEN_PARENTHESIS variable_loop CLOSE_PARENTHESIS SEMICOLON
    (92) write -> . WRITE OPEN_PARENTHESIS hyper_exp_loop CLOSE_PARENTHESIS SEMICOLON
    (96) function_call -> . ID function_call1 OPEN_PARENTHESIS function_call2 CLOSE_PARENTHESIS SEMICOLON
    (12) variable -> . ID variable1

    IF              shift and go to state 96
    FOR             shift and go to state 97
    WHILE           shift and go to state 98
    READ            shift and go to state 99
    WRITE           shift and go to state 100
    ID              shift and go to state 69
